Create preprocessing pipeline, and EDA on distance, time, weight, cude, and shift

--- a/EDA_Jiashen/eda_OE.ipynb
+++ b/EDA_Jiashen/eda_OE.ipynb
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 228,
    "id": "e4ab2a78",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of unique AssignmentID: 70.83%\n"
+      "Percentage of unique AssignmentID: 70.83%\n",
+      "Percentage of 'AssignmentOpen' ActivityCode: 0.93%\n"
      ]
     }
    ],
@@ -927,7 +928,11 @@
     "# Check percentage of unique AssignmentID\n",
     "assignment_counts = OE_Activity[\"AssignmentID\"].value_counts()\n",
     "unique_assignment_pct = (assignment_counts == 1).mean() * 100\n",
-    "print(f\"Percentage of unique AssignmentID: {unique_assignment_pct:.2f}%\")"
+    "print(f\"Percentage of unique AssignmentID: {unique_assignment_pct:.2f}%\")\n",
+    "\n",
+    "# Count percentage of ActivityCode that is \"AssignmentOpen\"\n",
+    "assignment_open_pct = (OE_Activity[\"ActivityCode\"] == \"AssignmentOpen\").mean() * 100\n",
+    "print(f\"Percentage of 'AssignmentOpen' ActivityCode: {assignment_open_pct:.2f}%\")"
    ]
   },
   {
@@ -954,6 +959,25 @@
     "workcode_counts = OE_Activity[\"WorkCode\"].value_counts(normalize=True) * 100\n",
     "print(\"WorkCode Proportions (%):\")\n",
     "print(workcode_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "b7050690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(1), np.int64(8), np.int64(9), np.int64(10), np.int64(11), np.int64(12), np.int64(13), np.int64(14), np.int64(15), np.int64(16), np.int64(17), np.int64(18), np.int64(19), np.int64(20), np.int64(21), np.int64(22), np.int64(23), np.int64(24), np.int64(25), np.int64(26), np.int64(30), np.int64(31), np.int64(32), np.int64(33), np.int64(34), np.int64(35), np.int64(36), np.int64(37), np.int64(39), np.int64(40), np.int64(41), np.int64(42), np.int64(50), np.int64(68), np.int64(69), np.int64(70), np.int64(71), np.int64(72), np.int64(73), np.int64(74), np.int64(75), np.int64(78), np.int64(79), np.int64(80), np.int64(81), np.int64(82), np.int64(83), np.int64(84), np.int64(85), np.int64(86), np.int64(90)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "aisles = pd.to_numeric(OE_Locations[\"Aisle\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "print(sorted(aisles.dropna().unique()))"
    ]
   },
   {
@@ -1099,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 230,
    "id": "178ef9d7",
    "metadata": {},
    "outputs": [
@@ -1628,9 +1652,249 @@
        "      <td>344.0</td>\n",
        "      <td>32.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>21</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>29442.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2025-11-10 13:03:09.567</td>\n",
+       "      <td>2025-11-10 13:03:09.567</td>\n",
+       "      <td>479026.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>35</td>\n",
+       "      <td>36</td>\n",
+       "      <td>35|36|||</td>\n",
+       "      <td>35|22|||</td>\n",
+       "      <td>634.0</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>22</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30530.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2025-11-10 13:03:42.007</td>\n",
+       "      <td>2025-11-10 13:03:42.007</td>\n",
+       "      <td>2912996.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>38</td>\n",
+       "      <td>35|38|||</td>\n",
+       "      <td>35|36|||</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>46359.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2025-11-10 13:04:37.983</td>\n",
+       "      <td>2025-11-10 13:04:37.983</td>\n",
+       "      <td>54443.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36|36|||</td>\n",
+       "      <td>35|38|||</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>144.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>39836.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2025-11-10 13:05:06.140</td>\n",
+       "      <td>2025-11-10 13:05:06.140</td>\n",
+       "      <td>5317.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36|36|||</td>\n",
+       "      <td>36|36|||</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>AssignmentOpen</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-11-10 13:05:07.967</td>\n",
+       "      <td>2025-11-10 13:05:07.967</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>36|36|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5874.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-11-10 13:09:18.243</td>\n",
+       "      <td>2025-11-10 13:09:18.243</td>\n",
+       "      <td>12251.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>25|15|||</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>27</td>\n",
+       "      <td>AssignmentOpen</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-11-10 13:09:23.787</td>\n",
+       "      <td>2025-11-10 13:09:23.787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>25|15|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>28</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3925.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2025-11-10 13:10:51.020</td>\n",
+       "      <td>2025-11-10 13:10:51.020</td>\n",
+       "      <td>7787.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>19|21|||</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>29</td>\n",
+       "      <td>AssignmentOpen</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2025-11-10 13:10:52.487</td>\n",
+       "      <td>2025-11-10 13:10:52.487</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>19|21|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>64</td>\n",
+       "      <td>2025-11-10</td>\n",
+       "      <td>30</td>\n",
+       "      <td>PickPut</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5741.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2025-11-10 13:29:23.200</td>\n",
+       "      <td>2025-11-10 13:29:23.200</td>\n",
+       "      <td>20969.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>40</td>\n",
+       "      <td>18|40|||</td>\n",
+       "      <td>&lt;NA&gt;|&lt;NA&gt;|||</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20 rows × 27 columns</p>\n",
+       "<p>30 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1655,6 +1919,16 @@
        "17      64  2025-11-10     18         PickPut        10     2263.0       5.0   \n",
        "18      64  2025-11-10     19         PickPut        10    39835.0       6.0   \n",
        "19      64  2025-11-10     20         PickPut        10    39833.0       6.0   \n",
+       "20      64  2025-11-10     21         PickPut        10    29442.0       7.0   \n",
+       "21      64  2025-11-10     22         PickPut        10    30530.0       6.0   \n",
+       "22      64  2025-11-10     23         PickPut        10    46359.0       6.0   \n",
+       "23      64  2025-11-10     24         PickPut        10    39836.0       6.0   \n",
+       "24      64  2025-11-10     25  AssignmentOpen        10        NaN       0.0   \n",
+       "25      64  2025-11-10     26         PickPut        10     5874.0       1.0   \n",
+       "26      64  2025-11-10     27  AssignmentOpen        10        NaN       0.0   \n",
+       "27      64  2025-11-10     28         PickPut        10     3925.0       4.0   \n",
+       "28      64  2025-11-10     29  AssignmentOpen        10        NaN       0.0   \n",
+       "29      64  2025-11-10     30         PickPut        10     5741.0       2.0   \n",
        "\n",
        "           Timestamp_Start           Timestamp_End  LocationID  ...  Aisle  \\\n",
        "0  2025-11-10 11:38:34.043 2025-11-10 11:38:34.043         NaN  ...    NaN   \n",
@@ -1677,6 +1951,16 @@
        "17 2025-11-10 12:59:31.593 2025-11-10 12:59:31.593     55803.0  ...     33   \n",
        "18 2025-11-10 13:01:13.520 2025-11-10 13:01:13.520    187461.0  ...     35   \n",
        "19 2025-11-10 13:01:58.250 2025-11-10 13:01:58.250    188904.0  ...     35   \n",
+       "20 2025-11-10 13:03:09.567 2025-11-10 13:03:09.567    479026.0  ...     35   \n",
+       "21 2025-11-10 13:03:42.007 2025-11-10 13:03:42.007   2912996.0  ...     35   \n",
+       "22 2025-11-10 13:04:37.983 2025-11-10 13:04:37.983     54443.0  ...     36   \n",
+       "23 2025-11-10 13:05:06.140 2025-11-10 13:05:06.140      5317.0  ...     36   \n",
+       "24 2025-11-10 13:05:07.967 2025-11-10 13:05:07.967         NaN  ...    NaN   \n",
+       "25 2025-11-10 13:09:18.243 2025-11-10 13:09:18.243     12251.0  ...     25   \n",
+       "26 2025-11-10 13:09:23.787 2025-11-10 13:09:23.787         NaN  ...    NaN   \n",
+       "27 2025-11-10 13:10:51.020 2025-11-10 13:10:51.020      7787.0  ...     19   \n",
+       "28 2025-11-10 13:10:52.487 2025-11-10 13:10:52.487         NaN  ...    NaN   \n",
+       "29 2025-11-10 13:29:23.200 2025-11-10 13:29:23.200     20969.0  ...     18   \n",
        "\n",
        "     Bay  Level  Slot Aisle2  Bay2        LocKey    PrevLocKey  \\\n",
        "0   <NA>   <NA>  <NA>   <NA>  <NA>  <NA>|<NA>|||           NaN   \n",
@@ -1699,6 +1983,16 @@
        "17    37      3     1     33    37      33|37|||  <NA>|<NA>|||   \n",
        "18    18      4     2     35    18      35|18|||      33|37|||   \n",
        "19    22      4     2     35    22      35|22|||      35|18|||   \n",
+       "20    36      4     6     35    36      35|36|||      35|22|||   \n",
+       "21    38      3     2     35    38      35|38|||      35|36|||   \n",
+       "22    36      3     2     36    36      36|36|||      35|38|||   \n",
+       "23    36      3     3     36    36      36|36|||      36|36|||   \n",
+       "24  <NA>   <NA>  <NA>   <NA>  <NA>  <NA>|<NA>|||      36|36|||   \n",
+       "25    15      1     1     25    15      25|15|||  <NA>|<NA>|||   \n",
+       "26  <NA>   <NA>  <NA>   <NA>  <NA>  <NA>|<NA>|||      25|15|||   \n",
+       "27    21      1     2     19    21      19|21|||  <NA>|<NA>|||   \n",
+       "28  <NA>   <NA>  <NA>   <NA>  <NA>  <NA>|<NA>|||      19|21|||   \n",
+       "29    40      1     2     18    40      18|40|||  <NA>|<NA>|||   \n",
        "\n",
        "    Dist_prev_to_curr  Dist_curr_to_prev  \n",
        "0                 0.0                0.0  \n",
@@ -1721,8 +2015,18 @@
        "17                NaN                NaN  \n",
        "18              228.0              586.0  \n",
        "19              344.0               32.0  \n",
+       "20              634.0              139.0  \n",
+       "21              365.0               15.0  \n",
+       "22              240.0              144.0  \n",
+       "23                0.0                0.0  \n",
+       "24                NaN                NaN  \n",
+       "25                NaN                NaN  \n",
+       "26                NaN                NaN  \n",
+       "27                NaN                NaN  \n",
+       "28                NaN                NaN  \n",
+       "29                NaN                NaN  \n",
        "\n",
-       "[20 rows x 27 columns]"
+       "[30 rows x 27 columns]"
       ]
      },
      "metadata": {},
@@ -1730,7 +2034,33 @@
     }
    ],
    "source": [
-    "display(oe_detailed.head(20))"
+    "display(oe_detailed.head(30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "5c728073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Time Delta after 'AssignmentOpen': 459.17 seconds\n",
+      "Overall Average Time Delta: 109.43 seconds\n",
+      "Difference: 349.74 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check how much longer the time deltas for the rows after ActivityCode = \"AssignmentOpen\" are compared to the average\n",
+    "mask_after_assignment_open = oe_detailed[\"ActivityCode\"].shift(1) == \"AssignmentOpen\"\n",
+    "avg_time_delta_after_assignment_open = oe_detailed.loc[mask_after_assignment_open, \"Time_Delta_sec\"].mean()\n",
+    "overall_avg_time_delta = oe_detailed[\"Time_Delta_sec\"].mean()\n",
+    "print(f\"Average Time Delta after 'AssignmentOpen': {avg_time_delta_after_assignment_open:.2f} seconds\")\n",
+    "print(f\"Overall Average Time Delta: {overall_avg_time_delta:.2f} seconds\")\n",
+    "print(f\"Difference: {avg_time_delta_after_assignment_open - overall_avg_time_delta:.2f} seconds\")"
    ]
   },
   {
