--- a/EDA_Jiashen/eda_OE_SingleUser.ipynb
+++ b/EDA_Jiashen/eda_OE_SingleUser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "632d9843",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "6b1f44db",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f78e3071",
    "metadata": {},
    "outputs": [],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "866e00b3",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "03a48661",
    "metadata": {},
    "outputs": [
@@ -1093,6 +1093,7 @@
        "      <th>Quantity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>LocationID</th>\n",
+       "      <th>Time_Delta_sec</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1106,6 +1107,7 @@
        "      <td>NaN</td>\n",
        "      <td>2025-11-10 15:42:35.720</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>76.773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>184</th>\n",
@@ -1117,6 +1119,7 @@
        "      <td>3.0</td>\n",
        "      <td>2025-11-10 15:44:27.957</td>\n",
        "      <td>196405.0</td>\n",
+       "      <td>112.237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>185</th>\n",
@@ -1128,6 +1131,7 @@
        "      <td>2.0</td>\n",
        "      <td>2025-11-10 16:05:30.803</td>\n",
        "      <td>136177.0</td>\n",
+       "      <td>1262.846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>186</th>\n",
@@ -1139,6 +1143,7 @@
        "      <td>3.0</td>\n",
        "      <td>2025-11-10 16:06:47.810</td>\n",
        "      <td>42637.0</td>\n",
+       "      <td>77.007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>187</th>\n",
@@ -1150,6 +1155,7 @@
        "      <td>3.0</td>\n",
        "      <td>2025-11-10 16:09:50.767</td>\n",
        "      <td>6780.0</td>\n",
+       "      <td>182.957</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1163,12 +1169,12 @@
        "186         PickPut     419        10       7957410    54061.0       3.0   \n",
        "187         PickPut     419        10       7957410     3236.0       3.0   \n",
        "\n",
-       "                  Timestamp  LocationID  \n",
-       "183 2025-11-10 15:42:35.720         NaN  \n",
-       "184 2025-11-10 15:44:27.957    196405.0  \n",
-       "185 2025-11-10 16:05:30.803    136177.0  \n",
-       "186 2025-11-10 16:06:47.810     42637.0  \n",
-       "187 2025-11-10 16:09:50.767      6780.0  "
+       "                  Timestamp  LocationID  Time_Delta_sec  \n",
+       "183 2025-11-10 15:42:35.720         NaN          76.773  \n",
+       "184 2025-11-10 15:44:27.957    196405.0         112.237  \n",
+       "185 2025-11-10 16:05:30.803    136177.0        1262.846  \n",
+       "186 2025-11-10 16:06:47.810     42637.0          77.007  \n",
+       "187 2025-11-10 16:09:50.767      6780.0         182.957  "
       ]
      },
      "metadata": {},
@@ -1191,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "id": "6c3c9b2d",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "id": "0d866f76",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "id": "df7c5774",
    "metadata": {},
    "outputs": [
@@ -1764,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "id": "5e3d4139",
    "metadata": {},
    "outputs": [],
@@ -1785,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "id": "930f8a62",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hs/r4ck14j54v17d80mrc1wt5kw0000gn/T/ipykernel_24552/4188640830.py:3: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
+      "/var/folders/hs/r4ck14j54v17d80mrc1wt5kw0000gn/T/ipykernel_14009/4188640830.py:3: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
       "  Distance.stack(dropna=False)\n"
      ]
     },
@@ -2030,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "id": "5181e033",
    "metadata": {},
    "outputs": [
@@ -2251,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "id": "92ab4464",
    "metadata": {},
    "outputs": [
@@ -2261,6 +2267,7 @@
      "text": [
       "Total pick tasks(grouped) for user 419 on 2025-11-10: 277\n",
       "Total quantity picked for user 419 on 2025-11-10: 771.0\n",
+      "Number of 'AssignmentOpen' ActivityCode: 12\n",
       "Average Time Delta between pick tasks: 152.75 seconds\n",
       "Average Distance travelled: 400.12 units\n"
      ]
@@ -2269,6 +2276,10 @@
    "source": [
     "print(f\"Total pick tasks(grouped) for user 419 on 2025-11-10: {df.shape[0]}\")\n",
     "print(f\"Total quantity picked for user 419 on 2025-11-10: {df['Quantity'].sum()}\")\n",
+    "\n",
+    "# Count number of ActivityCode that is \"AssignmentOpen\"\n",
+    "assignment_open_count = (df[\"ActivityCode\"] == \"AssignmentOpen\").sum()\n",
+    "print(f\"Number of 'AssignmentOpen' ActivityCode: {assignment_open_count}\")\n",
     "\n",
     "# Average Time_Delta_sec between pick tasks\n",
     "avg_time_delta = df[\"Time_Delta_sec\"].mean()\n",
