Update plots and eda for 2/12 meeting

--- a/EDA_Jiashen/eda_shift.ipynb
+++ b/EDA_Jiashen/eda_shift.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2bbbb508",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
     "    color=\"lightblue\"\n",
     ")\n",
     "\n",
-    "plt.title(\"Task Time Delta by Time of Day\")\n",
+    "plt.title(\"Pick Task Time by Time of Day\")\n",
     "plt.xlabel(\"Time of Day\")\n",
     "plt.ylabel(\"Time Delta (seconds)\")\n",
     "plt.grid(axis=\"y\", alpha=0.3)\n",
