Update plot for Report v1.0

--- a/EDA_Jiashen/eda_OE.ipynb
+++ b/EDA_Jiashen/eda_OE.ipynb
@@ -1061,6 +1061,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 238,
+   "id": "1821dc84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of distinct days: 8\n",
+      "Days:\n",
+      "[datetime.date(2025, 9, 8), datetime.date(2025, 9, 9), datetime.date(2025, 11, 10), datetime.date(2025, 11, 11), datetime.date(2025, 11, 12), datetime.date(2025, 11, 13), datetime.date(2025, 12, 1), datetime.date(2025, 12, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count and list number of distinct days\n",
+    "OE_Activity[\"Timestamp\"] = pd.to_datetime(OE_Activity[\"Timestamp\"], errors=\"coerce\")\n",
+    "\n",
+    "# extract date only\n",
+    "OE_Activity[\"Date\"] = OE_Activity[\"Timestamp\"].dt.date\n",
+    "\n",
+    "# number of distinct days\n",
+    "num_days = OE_Activity[\"Date\"].nunique()\n",
+    "\n",
+    "# list of days\n",
+    "unique_days = sorted(OE_Activity[\"Date\"].dropna().unique())\n",
+    "\n",
+    "print(\"Number of distinct days:\", num_days)\n",
+    "print(\"Days:\")\n",
+    "print(unique_days)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b7050690",
    "metadata": {},
