--- a/OE_first_models.ipynb
+++ b/OE_first_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 119,
    "id": "713dddee",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,9 @@
     "warehouse_name = \"OE\"\n",
     "# Insert user id here\n",
     "user = \"betsyfrdmn\"\n",
+    "\n",
+    "user = \"conan/Desktop/lucas\"\n",
+    "\n",
     "# GitHub repo\n",
     "base = \"Lucas_Systems_Capstone_Project\"\n",
     "\n",
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "6556bc9f",
    "metadata": {},
    "outputs": [
@@ -39,42 +42,42 @@
       "\n",
       "----------------------------------------\n",
       "MODELING WORK CODE: 30\n",
-      "Rows Analyzed: 67402\n",
-      "R-squared: 0.0916\n",
-      "Mean Absolute Error: 57.92 seconds\n",
+      "Rows Analyzed: 67391\n",
+      "R-squared: 0.0929\n",
+      "Mean Absolute Error: 59.44 seconds\n",
       "\n",
       "Impact on Time (Explainability):\n",
       "            Factor  Coef (Sec)\n",
-      "1           Weight    3.403539\n",
-      "0  Travel_Distance    0.572625\n",
-      "2         Quantity    0.134261\n",
-      "3            Level   -6.096473\n",
+      "1           Weight    3.373202\n",
+      "0  Travel_Distance    0.561978\n",
+      "2         Quantity    0.128198\n",
+      "3            Level   -5.283810\n",
       "\n",
       "----------------------------------------\n",
       "MODELING WORK CODE: 20\n",
-      "Rows Analyzed: 22308\n",
-      "R-squared: 0.1404\n",
-      "Mean Absolute Error: 62.09 seconds\n",
+      "Rows Analyzed: 22280\n",
+      "R-squared: 0.1591\n",
+      "Mean Absolute Error: 60.50 seconds\n",
       "\n",
       "Impact on Time (Explainability):\n",
       "            Factor  Coef (Sec)\n",
-      "3            Level    7.510610\n",
-      "1           Weight    1.248654\n",
-      "0  Travel_Distance    0.386080\n",
+      "3            Level    6.552165\n",
+      "1           Weight    1.093409\n",
+      "0  Travel_Distance    0.376164\n",
       "2         Quantity    0.000000\n",
       "\n",
       "----------------------------------------\n",
       "MODELING WORK CODE: 10\n",
-      "Rows Analyzed: 5036\n",
-      "R-squared: 0.0572\n",
-      "Mean Absolute Error: 132.39 seconds\n",
+      "Rows Analyzed: 4272\n",
+      "R-squared: 0.0108\n",
+      "Mean Absolute Error: 80.40 seconds\n",
       "\n",
       "Impact on Time (Explainability):\n",
       "            Factor  Coef (Sec)\n",
-      "1           Weight    3.635492\n",
-      "2         Quantity    0.961425\n",
-      "0  Travel_Distance    0.295612\n",
-      "3            Level   -0.544222\n"
+      "2         Quantity    0.444469\n",
+      "1           Weight    0.236189\n",
+      "0  Travel_Distance    0.090921\n",
+      "3            Level   -1.634435\n"
      ]
     }
    ],
@@ -691,9 +694,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be3fc98d",
+   "metadata": {},
+   "source": [
+    "## Conan's Neural Nets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b54c90e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "43cb6d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nn = df.copy()\n",
+    "df_nn = df_nn[df_nn[\"WorkCode\"] == \"30\"]\n",
+    "\n",
+    "# Define features and target\n",
+    "numerical_features = [\"Quantity\", \"Weight\", \"Cube\"]\n",
+    "categorical_features = [\"Aisle\", \"Bay\", \"Level\"] # removed WorkCode, productID\n",
+    "target = \"Time_Delta_sec\"\n",
+    "\n",
+    "df_nn = df_nn[numerical_features+categorical_features+[target]]\n",
+    "df_nn = df_nn[df_nn[target] <= 1800]\n",
+    "\n",
+    "# Convert columns to numeric, this ensures everything is a float\n",
+    "for col in numerical_features + [target]:\n",
+    "    df_nn[col] = pd.to_numeric(df_nn[col], errors=\"coerce\")\n",
+    "\n",
+    "# OHE categorical columns\n",
+    "enc = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "enc.fit(df_nn[categorical_features])\n",
+    "df_ohe = enc.transform(df_nn[categorical_features])\n",
+    "df_nn = pd.concat([df_nn.drop(columns=categorical_features), pd.DataFrame(df_ohe)], axis = 1)\n",
+    "\n",
+    "# Drop rows with missing values globally\n",
+    "df_nn.dropna(inplace=True)\n",
+    "\n",
+    "# Split Data\n",
+    "X = df_nn.drop(columns=[target])\n",
+    "y = df_nn[target]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "7f524978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(100, 500),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Dropout(0.2),\n",
+    "    nn.Linear(500, 200),\n",
+    "    nn.Dropout(0.2),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(200, 25),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(25, 1)\n",
+    ")\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "639e23d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 10674.8838\n",
+      "Epoch 2, Loss: 1767.9384\n",
+      "Epoch 3, Loss: 26414.3105\n",
+      "Epoch 4, Loss: 9852.8701\n",
+      "Epoch 5, Loss: 13194.1055\n",
+      "Epoch 6, Loss: 7411.0088\n",
+      "Epoch 7, Loss: 2137.5549\n",
+      "Epoch 8, Loss: 56297.2539\n",
+      "Epoch 9, Loss: 49771.3711\n",
+      "Epoch 10, Loss: 16188.7588\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "\n",
+    "X_train_tensor = torch.tensor(X_train.to_numpy(dtype=np.float64), dtype=torch.float32).unsqueeze(1)\n",
+    "y_train_tensor = torch.tensor(y_train.to_numpy(dtype=np.float64), dtype=torch.float32).unsqueeze(1)\n",
+    "\n",
+    "train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "for epoch in range(10):\n",
+    "    for inputs, labels in train_loader:\n",
+    "        \n",
+    "        # flatten if needed\n",
+    "        inputs = inputs.view(inputs.size(0), -1)\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "\n",
+    "        nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}, Loss: {loss.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "74388869",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MAE: 45.6620\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test_tensor = torch.tensor(X_test.to_numpy(dtype=np.float64), dtype=torch.float32).unsqueeze(1)\n",
+    "y_test_tensor = torch.tensor(y_test.to_numpy(dtype=np.float64), dtype=torch.float32).unsqueeze(1)\n",
+    "\n",
+    "test_dataset = TensorDataset(X_test_tensor, y_test_tensor)\n",
+    "\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "model.eval()\n",
+    "criterion = nn.L1Loss()\n",
+    "\n",
+    "test_loss = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in test_loader:\n",
+    "        \n",
+    "        inputs = inputs.view(inputs.size(0), -1)\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        test_loss += loss.item()\n",
+    "\n",
+    "avg_mse = test_loss / len(test_loader)\n",
+    "\n",
+    "print(f\"Test MAE: {avg_mse:.4f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0707cc2f",
+   "id": "c60f8592",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d0a726",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -715,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
