--- a/EDA_Conan/RT_clean.ipynb
+++ b/EDA_Conan/RT_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "baceee49",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "6a5b5991",
    "metadata": {},
    "outputs": [],
@@ -58,15 +58,47 @@
     "}\n",
     "\n",
     "\n",
-    "rt_activity = pd.read_csv(\"~/Desktop/lucas/database_backups_csv/RT/RT_Activity.csv\", header=None, names=act_names, dtype=act_dtypes)\n",
-    "rt_activity2 = pd.read_csv(\"~/Desktop/lucas/database_backups_csv/RT/RT_Activity2.csv\", header=0, dtype=act_dtypes)\n",
-    "rt_activity = pd.concat([rt_activity, rt_activity2])\n",
-    "rt_location = pd.read_csv(\"~/Desktop/lucas/database_backups_csv/RT/RT_Locations.csv\", header=None, names=loc_names, dtype=loc_dtypes)\n",
-    "rt_products = pd.read_csv(\"~/Desktop/lucas/database_backups_csv/RT/RT_Products.csv\", header=None, names=prod_names, dtype=prod_dtypes)\n",
-    "distance_rt = pd.read_csv(\"~/Desktop/lucas/distance_matrices/distance_matrix_RT.csv\",\n",
+    "rt_activity1 = pd.read_csv(\"../data/database_backups_csv/RT/RT_Activity.csv\", header=None, names=act_names, dtype=act_dtypes)\n",
+    "rt_activity2 = pd.read_csv(\"../data/database_backups_csv/RT/RT_Activity2.csv\", header=0, dtype=act_dtypes)\n",
+    "rt_activity = pd.concat([rt_activity1, rt_activity2])\n",
+    "rt_location = pd.read_csv(\"../data/database_backups_csv/RT/RT_Locations.csv\", header=None, names=loc_names, dtype=loc_dtypes)\n",
+    "rt_products = pd.read_csv(\"../data/database_backups_csv/RT/RT_Products.csv\", header=None, names=prod_names, dtype=prod_dtypes)\n",
+    "distance_rt = pd.read_csv(\"../data/distance_matrices/distance_matrix_RT.csv\",\n",
     "                          index_col=\"Unnamed: 0\")\n",
     "distance_lookup = distance_rt.stack().reset_index()\n",
     "distance_lookup.columns = [\"Prior_Location\", \"Location\", \"Distance\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bbdc51d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe_activity = pd.read_csv(\"../data/database_backups_csv/OE/OE_Activity.csv\", header=None, names=act_names, dtype=act_dtypes)\n",
+    "of_activity = pd.read_csv(\"../data/database_backups_csv/OF/OF_Activity.csv\", header=None, names=act_names, dtype=act_dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "03c56917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2026-01-05 21:49:56.000'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rt_activity2[\"Timestamp\"].max()"
    ]
   },
   {
